--- a/mre-styles.css
+++ b/mre-styles.css
@@ -1,12 +1,21 @@
-.mre-damage-card > *:not(:last-child) {
-    margin-bottom: .5rem;
-}
-
 .mre-damage-card .dice-total::after {
     content: attr(data-damage-type);
     display: block;
     margin-bottom: .25rem;
     font-size: .8rem;
     line-height: .8rem;
-    color: dimgray;
+    font-weight: normal;
+    color: #333333;
+}
+
+.mre-damage-card > *:not(:last-child) {
+    margin-bottom: .4rem;
+}
+
+.mre-damage-card hr {
+    margin: 0;
+}
+
+.dice-roll .dice-formula {
+    background: rgba(0, 0, 0, 0.2);
 }
