Improve layout and style of item damage rolls

--- a/mre-styles.css
+++ b/mre-styles.css
@@ -8,7 +8,7 @@
     color: #333333;
 }
 
-.mre-damage-card > *:not(:last-child) {
+.mre-damage-card .damage-group > *:not(:last-child) {
     margin-bottom: .4rem;
 }
 
