Partially fix formatting of auto-roll buttons in tidy sheet

--- a/mre-styles.css
+++ b/mre-styles.css
@@ -102,21 +102,25 @@
     height: 16px;
 }
 
-.dnd5e.sheet.item .damage-header-container {
+.dnd5e.sheet.item .damage-header-container,
+.tidy5e.sheet.item .damage-header-container {
     display: flex;
 }
 
-.dnd5e.sheet.item .damage-header-container .damage-header {
+.dnd5e.sheet.item .damage-header-container .damage-header,
+.tidy5e.sheet.item .damage-header-container .damage-header {
     flex: 1;
     display: inline-block;
 }
 
-.dnd5e.sheet.item .mre-auto-roll {
+.dnd5e.sheet.item .mre-auto-roll,
+.tidy5e.sheet.item .mre-auto-roll {
     flex: 0 0 60px;
     max-height: 24px;
 }
 
-.dnd5e.sheet.item .mre-auto-roll span.label {
+.dnd5e.sheet.item .mre-auto-roll span.label,
+.tidy5e.sheet.item .mre-auto-roll span.label {
     display: inline-block;
     position: relative;
     width: 0;
@@ -129,11 +133,13 @@
     color: #7a7971;
 }
 
-.dnd5e.sheet.item .damage-header-container .mre-auto-roll {
+.dnd5e.sheet.item .damage-header-container .mre-auto-roll,
+.tidy5e.sheet.item .damage-header-container .mre-auto-roll {
     display: inline-block;
 }
 
-.dnd5e.sheet.item .mre-auto-roll button.checkbox {
+.dnd5e.sheet.item .mre-auto-roll button.checkbox,
+.tidy5e.sheet.item .mre-auto-roll button.checkbox {
     position: relative;
     width: 16px;
     height: 16px;
@@ -143,12 +149,14 @@
     margin: 5px 2px 5px 10px;
 }
 
-.dnd5e.sheet.item .mre-auto-roll button.checkbox:hover {
+.dnd5e.sheet.item .mre-auto-roll button.checkbox:hover,
+.tidy5e.sheet.item .mre-auto-roll button.checkbox:hover {
     box-shadow: none;
     text-shadow: 0 0 8px red;
 }
 
-.dnd5e.sheet.item .mre-auto-roll button.checkbox:before {
+.dnd5e.sheet.item .mre-auto-roll button.checkbox:before,
+.tidy5e.sheet.item .mre-auto-roll button.checkbox:before {
     font-family: "Font Awesome 5 Free";
     display: inline-block;
     -moz-osx-font-smoothing: grayscale;
@@ -164,15 +172,18 @@
     color: #7a7971;
 }
 
-.dnd5e.sheet.item .mre-auto-roll button.checkbox.unchecked:before {
+.dnd5e.sheet.item .mre-auto-roll button.checkbox.unchecked:before,
+.tidy5e.sheet.item .mre-auto-roll button.checkbox.unchecked:before {
     content: "\f057"; /* times */
 }
 
-.dnd5e.sheet.item .mre-auto-roll button.checkbox.indeterminate:before {
+.dnd5e.sheet.item .mre-auto-roll button.checkbox.indeterminate:before,
+.tidy5e.sheet.item .mre-auto-roll button.checkbox.indeterminate:before {
     content: "\f056"; /* minus */
 }
 
-.dnd5e.sheet.item .mre-auto-roll button.checkbox.checked:before {
+.dnd5e.sheet.item .mre-auto-roll button.checkbox.checked:before,
+.tidy5e.sheet.item .mre-auto-roll button.checkbox.checked:before {
     content: "\f058"; /* check */
 }
 
