--- a/mre-styles.css
+++ b/mre-styles.css
@@ -143,7 +143,7 @@
     height: 16px;
     top: -2px;
     border: none;
-    background: transparent;
+    background: none;
     margin: 5px 2px 5px 10px;
     cursor: pointer;
 }
@@ -185,5 +185,13 @@
 .dnd5e.sheet.item .mre-auto-roll button.checkbox.checked:before,
 .tidy5e.sheet.item .mre-auto-roll button.checkbox.checked:before {
     content: "\f058"; /* check */
+}
+
+/* Tidy5e Sheet compatibility for auto roll "checkboxes" */
+.tidy5e.sheet.item .sheet-body .tab.details .form-group .mre-auto-roll button.checkbox {
+    background: none;
+    width: 16px;
+    height: 16px;
+    font-size: 14px;
 }
 
