Streamline process of getting the appropriate form data from the formula group config sheet

--- a/templates/formula-group-config.hbs
+++ b/templates/formula-group-config.hbs
@@ -8,7 +8,7 @@
                 <td>
                     <input
                         title="{{localize "mre-dnd5e.FORMULA-GROUP.RenameFormulaGroup" }}"
-                        name="formulaGroups[{{@index}}].label"
+                        name="formulaGroupLabels"
                         type="text"
                         value="{{this.label}}"
                     />
@@ -34,7 +34,7 @@
                 {{#each ../formulaGroups}}
                     <td>
                         <input
-                            name="formulaGroups[{{@index}}].containsFormula[{{@../index}}]"
+                            name="formulaGroupContains.{{@index}}"
                             type="checkbox"
                             {{checked (lookup this.containsFormula @../index)}}
                         />
