fix: v9 issue with checkboxes

--- a/templates/formula-group-config.hbs
+++ b/templates/formula-group-config.hbs
@@ -34,8 +34,9 @@
                 {{#each ../formulaGroups}}
                     <td>
                         <input
-                            name="formulaGroupContains.{{@index}}"
+                            name="formulaGroupContains.{{@index}}.{{@../index}}"
                             type="checkbox"
+                            {{!-- value="true" --}}
                             {{checked (lookup this.containsFormula @../index)}}
                         />
                     </td>
